<resources>
    <string name="app_name">Rick and Morty</string>
    <string name="character_not_found">Character not found</string>
    <string name="character_detail_species">Species</string>
    <string name="character_detail_status">Status</string>
    <string name="character_detail_gender">Gender</string>
    <string name="character_detail_type">Type</string>
    <string name="character_created">Created at %s</string>
    <string name="character_detail_created">Created at</string>
    <string name="navigate_back_arrow_content_desc">Go back</string>
    <string name="character_list_title">Rick &amp; Morty Character List</string>
    <string name="character_list_title_cd">Current screen: Character List</string>
    <string name="character_detail_title_cd">Current screen: Detail of character %s</string>
    <string name="advanced_search_title">Advanced Search</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="species">Species</string>
    <string name="done">Done</string>
    <string name="error_feedback_text">An error happened:\n%s</string>
    <string name="error_sheet_title">An error happened</string>
    <string name="error_details_section">Error details:\n%s</string>
    <string name="advanced_search_enter_name">Enter character name. Current value: %s</string>
    <string name="advanced_search_enter_species">Enter character species. Current value: %s</string>
    <string name="advanced_search_enter_type">Enter character type. Current value: %s</string>
    <string name="advanced_search_select_status">Select character status. Current value: %s</string>
    <string name="advanced_search_select_gender">Select character gender. Current value: %s</string>
    <string name="explicit_blank_text">blank</string>
    <string name="any">Any</string>
    <string name="unknown">Unknown</string>
    <string name="status_alive">Alive</string>
    <string name="status_dead">Dead</string>
    <string name="gender_genderless">Genderless</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="google_sign_in_action">Sign in with Google</string>
    <string name="github_sign_in_action">Sign in with GitHub</string>
    <string name="email_text_field_hint">Enter email</string>
    <string name="sign_in_successful_feedback">Sign in successful</string>
    <string name="sign_in_successful_feedback_with_user">Welcome, %s</string>
</resources>